force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Seq. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>