force-app/main/default/objects/Question__c/fields/AnswerUser__c.field-meta.xml
<CustomField>
    <fullName>AnswerUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>점검 주체</description>
    <label>Answer User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BO_Question</relationshipName>
    <type>Lookup</type>
</CustomField>