force-app/main/default/objects/Question__c/fields/BOBizReview__c.field-meta.xml
<CustomField>
    <fullName>BOBizReview__c</fullName>
    <label>BO Biz.Review</label>
    <referenceTo>Biz_Review__c</referenceTo>
    <relationshipName>BO_Question</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>