force-app/main/default/objects/Question__c/fields/DealBreakScore__c.field-meta.xml
<CustomField>
    <fullName>DealBreakScore__c</fullName>
    <label>Deal Break Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>