force-app/main/default/objects/Question__c/fields/IsAnswer__c.field-meta.xml
<CustomField>
    <fullName>IsAnswer__c</fullName>
    <label>IsAnswer</label>
    <summaryFilterItems>
        <field>Answer__c.IsChecked__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Answer__c.BOQuestion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>