force-app/main/default/objects/Question__c/fields/IsPMAnswer__c.field-meta.xml
<CustomField>
    <fullName>IsPMAnswer__c</fullName>
    <label>IsPMAnswer</label>
    <summaryFilterItems>
        <field>Answer__c.IsPMChecked__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Answer__c.BOQuestion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>