force-app/main/default/objects/Question__c/fields/PMAnswer__c.field-meta.xml
<CustomField>
    <fullName>PMAnswer__c</fullName>
    <label>PM Answer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>