force-app/main/default/objects/Question__c/fields/PMEvaluationBasis__c.field-meta.xml
<CustomField>
    <fullName>PMEvaluationBasis__c</fullName>
    <label>PM Evaluation Basis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>