force-app/main/default/objects/Question__c/fields/PMScore__c.field-meta.xml
<CustomField>
    <fullName>PMScore__c</fullName>
    <label>PM Score</label>
    <summarizedField>Answer__c.Score__c</summarizedField>
    <summaryFilterItems>
        <field>Answer__c.IsPMChecked__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Answer__c.BOQuestion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>