force-app/main/default/objects/Question__c/fields/ReviewDivision__c.field-meta.xml
<CustomField>
    <fullName>ReviewDivision__c</fullName>
    <description>심의부서</description>
    <label>Review Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>