force-app/main/default/objects/Question__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>총 감점점수</description>
    <label>Score</label>
    <summarizedField>Answer__c.Score__c</summarizedField>
    <summaryFilterItems>
        <field>Answer__c.IsChecked__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Answer__c.BOQuestion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>