force-app/main/default/objects/Question__c/fields/ScoreStandard__c.field-meta.xml
<CustomField>
    <fullName>ScoreStandard__c</fullName>
    <label>Score Standard</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>