force-app/main/default/objects/Question__c/fields/ShortAnswerScore__c.field-meta.xml
<CustomField>
    <fullName>ShortAnswerScore__c</fullName>
    <label>Short Answer Score</label>
    <summarizedField>Answer__c.ShortAnswer__c</summarizedField>
    <summaryFilterItems>
        <field>Answer__c.AnswerType__c</field>
        <operation>equals</operation>
        <value>주관식</value>
    </summaryFilterItems>
    <summaryForeignKey>Answer__c.BOQuestion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>