force-app/main/default/objects/Question__c/fields/TotalPMScore__c.field-meta.xml
<CustomField>
    <fullName>TotalPMScore__c</fullName>
    <formula>IF(PMScore__c&lt; 0, IF(PMScore__c&lt; -5, -5, PMScore__c) , IF(PMShortAnswerScore__c &lt; 0, PMShortAnswerScore__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PM Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>