force-app/main/default/objects/Question__c/fields/TotalScore__c.field-meta.xml
<CustomField>
    <fullName>TotalScore__c</fullName>
    <formula>IF(Score__c &lt; 0, IF(Score__c &lt; -5, -5, Score__c ) , IF(ShortAnswerScore__c &lt; 0, ShortAnswerScore__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>