force-app/main/default/objects/Question__c/fields/UserAnswer__c.field-meta.xml
<CustomField>
    <fullName>UserAnswer__c</fullName>
    <label>User Answer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>