force-app/main/default/objects/Question__c/fields/UserEvaluationBasis__c.field-meta.xml
<CustomField>
    <fullName>UserEvaluationBasis__c</fullName>
    <label>User Evaluation Basis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>